--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@types/jsbarcode": "^3.11.4",
+    "@types/qrcode": "^1.5.6",
     "clsx": "^2.1.1",
     "html-to-image": "^1.11.13",
     "html5-qrcode": "^2.3.8",
@@ -19,6 +20,7 @@
     "lucide-react": "^0.563.0",
     "mongoose": "^9.2.1",
     "next": "16.1.6",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "19.2.3",
     "react-dom": "19.2.3",
